@@ -1,4 +1,4 @@
-/* $Id: milter-greylist.c,v 1.110 2005/06/05 21:59:02 manu Exp $ */
+/* $Id: milter-greylist.c,v 1.111 2005/09/20 14:00:35 manu Exp $ */
 
 /*
  * Copyright (c) 2004 Emmanuel Dreyfus
@@ -34,7 +34,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID  
-__RCSID("$Id: milter-greylist.c,v 1.110 2005/06/05 21:59:02 manu Exp $");
+__RCSID("$Id: milter-greylist.c,v 1.111 2005/09/20 14:00:35 manu Exp $");
 #endif
 #endif
 
@@ -1109,7 +1109,7 @@ prefix2mask4(cidr, mask)
 		bzero((void *)mask, sizeof(*mask));
 	} else {
 		cidr = 32 - cidr;
-		*mask = inet_makeaddr(~((1UL << cidr) - 1), 0L);
+		mask->s_addr = htonl(~((1UL << cidr) - 1));
 	}
 	
 	return mask;
